Affichage du profil de suggestion

--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -50,7 +50,7 @@
                                     <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
                                 </tr>
                                 <tr>
-                                    <a href="#" class="btn btn-dark">Voir le profil</a>
+                                    <a href="{{ path('app_suggestion_profilsuggestion', {'id': suggestion.id}) }}}" class="btn btn-dark">Voir le profil</a>
                                 </tr>
                                 <hr>
                                 <tr>
