Addition des marges dans le css commun et suppression du logo sur la page d'accueil avec remise en page nécessaire

--- a/templates/admin/ville/index.html.twig
+++ b/templates/admin/ville/index.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-
+    <div class="container-fluid">
     <div class="main">
         <div class="col-8">
 
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-
+    </div>
 {% endblock %}
 
 {% block javascripts %}
