--- a/public/css/filmami_accueil.css
+++ b/public/css/filmami_accueil.css
@@ -1,17 +1,11 @@
 /* ----------------------------- HEADER ---------------------- */
 
+
 /* ----- Formulaire de connexion ---- */
 
-.logo {
-    width: 5%;
-    height: 5%;
-}
-
 .formconnex {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    text-align: right;
+    margin-bottom: 40px;
 
 }
 
@@ -109,6 +103,7 @@ footer {
 @media (max-width: 865px) {
 
     /* ----------------------- HEADER ---------------------- */
+
     /* ----- Zone de connexion ---- */
     .form-inline {
         display: flex;
@@ -116,14 +111,6 @@ footer {
         text-align: center;
         margin-left: auto;
         margin-right: auto;
-    }
-
-    #dejamembre {
-        margin-right: 13%;
-    }
-
-    #btnco {
-        margin-right: 10%;
     }
 
     .form-group {
