--- a/templates/admin/genre/index.html.twig
+++ b/templates/admin/genre/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+    <div class="container-fluid">
     <div class="main">
         <div class="col-8">
             <h1>Gestion des Genres de Film</h1>
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-
+    </div>
 {% endblock %}
 
 {% block javascripts %}
