--- a/templates/suggestion/profil.html.twig
+++ b/templates/suggestion/profil.html.twig
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-   Nom : {{ profilsuggestion.pseudo }} <br>
+   Pseudo : {{ profilsuggestion.pseudo }} <br>
     Email: {{ profilsuggestion.pseudo }} <br>
     Ville : {{ profilsuggestion.ville.nom }} <br>
     Genre : {{ profilsuggestion.genre.type }}
