--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -59,6 +59,10 @@
 #}
     </div>
 
+    <a type="button" href="{{ path('app_profil_edit') }}"
+       class="btn btn-info">
+        Modifier votre profile
+    </a>
         <!-------- Fin container fluid -------->
 
 {% endblock %}
