--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -17,7 +17,7 @@
         <!-------- Fiche profil -------->
 <div class="row">
         <div class="col" id="profil">
-            <div class="float-left"><img class="img-thumbnail" src="{{ asset('img/placeholder2.png') }}" alt=""></div>
+            <div class="float-left"><img class="img-thumbnail" src="{{ asset('img/placeholder_3.png') }}" alt=""></div>
             <div class="col-11 p-1"> <h2>Pseudo : {{ profil.pseudo }}</h2></div>
 <div class="texteprofil">
 {#    <div class="col-11 p-1">ID : {{ profil.id }}</div>#}
@@ -25,10 +25,9 @@
     <div class="col-11 p-1">Ville: {{ profil.ville.nom }}</div>
     <div class="col-11 p-1">Age : 26 ans </div>
     <div class="col-11 p-1">Profession : infirmière</div>
+    <div class="col-11 p-1"> Email : {{ profil.email }}</div>
     <br>
     <div class="col-11 p-1">Genre de films préféré : {{ profil.genre.type }}</div>
-    <br>
-    <div class="col-11 p-1"> Email : {{ profil.email }}</div>
 </div>
             <hr>
 
