Création page et formulaire de contact (envoi non operationnel)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -108,7 +108,7 @@
             <a href="https://www.instagram.com/"><img src=img/logo_instagram.png alt=""></a>
             <a href="https://www.facebook.com/"><img src="img/logo_facebook.png" alt=""></a>
         </div>
-        <h5>Contactez-nous !</h5>
+        <h5><a href="{{ path('app_index_contact') }}">Contactez-nous !</a></h5>
         <br>
         <h6> Copyright &copy;Filmami 2020</h6>
     </footer>
