--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -9,60 +9,70 @@
 
 {% block body %}
     <div class="container-fluid">
-        <div class="row">
-            <div class="col" id="titreprofil">
-                <h1>Mon profil</h1>
-            </div>
-        </div>
-        <!-------- Fiche profil -------->
-<div class="row">
-        <div class="col" id="profil">
-            <div class="float-left"><img class="img-thumbnail" src="{{ asset('img/placeholder2.png') }}" alt=""></div>
-            <div class="col-11 p-1"> <h2>Pseudo : {{ profil.pseudo }}</h2></div>
-<div class="texteprofil">
-{#    <div class="col-11 p-1">ID : {{ profil.id }}</div>#}
-
-    <div class="col-11 p-1">Ville: {{ profil.ville.nom }}</div>
-    <div class="col-11 p-1">Age : 26 ans </div>
-    <div class="col-11 p-1">Profession : infirmière</div>
-    <br>
-    <div class="col-11 p-1">Genre de films préféré : {{ profil.genre.type }}</div>
-    <br>
-    <div class="col-11 p-1"> Email : {{ profil.email }}</div>
-</div>
-            <hr>
-
-<div class="row">
-    <div class="col" id="apropos">A propos de moi :</div>
-</div>
+    <div class="row">
+        <div class="col" id="titreprofil">
+            <h1>Mon profil</h1>
         </div>
     </div>
+    <!-------- Fiche profil -------->
+    <div class="row">
+        <div class="col" id="profil">
+            <div class="float-left"><img class="img-thumbnail" src="{{ asset('img/placeholder2.png') }}" alt="">
+            </div>
+            <div class="col-11 p-1"><h2>Pseudo : {{ profil.pseudo }}</h2></div>
+            <div class="texteprofil">
+                {#    <div class="col-11 p-1">ID : {{ profil.id }}</div>#}
+                <div class="col-11 p-1">Ville: {{ profil.ville.nom }}</div>
+                <div class="col-11 p-1">Age : 26 ans</div>
+                <div class="col-11 p-1">Profession : infirmière</div>
+                <br>
+                <div class="col-11 p-1">Genre de films préféré : {{ profil.genre.type }}</div>
+                <br>
+                <div class="col-11 p-1"> Email : {{ profil.email }}</div>
+                <br>
+                <hr>
 
-{#
-        <div class="col-3">
-            <h1>Mes amis :</h1>
-            <hr>
-            <div class="card" style="width: 18rem;">
-                <img src="{{ asset('img/placeholder.jpg') }}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Elsa</h5>
-                    <h5 class="card-title">Paris</h5>
-                    <h5 class="card-title">Drame</h5>
-                    <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
-                    <a href="#" class="btn btn-dark">Voir le profil</a>
-                    <hr>
-                    <a href="#" class="btn btn-dark">Envoyer un mail</a>
+
+                <div class="col-11 p-1"> Age : {{ profil.age }}</div>
+                <br>
+                <div class="col-11 p-1"> Sexe : {{ profil.sexe }}</div>
+                <br>
+                <div class="col-11 p-1"> A propos de moi : {{ profil.info }}</div>
+                <br>
+                <div class="col-11 p-1"> Photo :
+                    <td>
+                        {% if profil.image is not null %}
+                            <img src="{{ asset('images/' ~ profil.image) }}" height="500px">
+                        {% endif %}
+                    </td>
                 </div>
             </div>
-
         </div>
-#}
+        {#
+                <div class="col-3">
+                    <h1>Mes amis :</h1>
+                    <hr>
+                    <div class="card" style="width: 18rem;">
+                        <img src="{{ asset('img/placeholder.jpg') }}" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Elsa</h5>
+                            <h5 class="card-title">Paris</h5>
+                            <h5 class="card-title">Drame</h5>
+                            <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
+                            <a href="#" class="btn btn-dark">Voir le profil</a>
+                            <hr>
+                            <a href="#" class="btn btn-dark">Envoyer un mail</a>
+                        </div>
+                    </div>
+
+                </div>
+        #}
     </div>
 
-    <a type="button" href="{{ path('app_profil_edit') }}"
+    <a type="button" href="{{ path('app_profil_edit', {'id': profil.id}) }}"
        class="btn btn-info">
         Modifier votre profile
     </a>
-        <!-------- Fin container fluid -------->
+    <!-------- Fin container fluid -------->
 
 {% endblock %}
