--- a/public/css/suggestions.css
+++ b/public/css/suggestions.css
@@ -1,5 +1,9 @@
 
-
+.police {
+    font-family: 'Mystery Quest', cursive;
+    font-size: 5em;
+    text-align: center;
+}
 .card {
     margin-bottom: 30px;
 }
