--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -17,15 +17,15 @@
 
     <div class="container-fluid">
 
-
+        <h1 class="police">FILMAMI</h1>
         <div>
-            <h1>Voici les personnes près de chez vous </h1>
-            <h1>qui partagent vos goûts cinématographiques!</h1>
+            <h3>Voici les personnes près de chez vous qui partagent vos goûts cinématographiques!</h3>
+
+            <h4>Vous pouvez :</h4>
+            <h5>Visiter leur profil, et peut-être ensuite leur proposer d'être votre ami sur ce site.</h5>
+            <h5>Ou directement leur envoyer un mail pour leur proposer une séance!</h5>
+            <h3>Bon film !</h3>
             <hr>
-            <h2>Vous pouvez :</h2>
-            <h4>Visiter leur profil, et peut-être ensuite leur proposer d'être votre ami sur ce site.</h4>
-            <h4>Ou directement leur envoyer un mail pour leur proposer une séance!</h4>
-            <h2>Bon film !</h2>
         </div>
 
 
