--- a/public/css/filmami_commun.css
+++ b/public/css/filmami_commun.css
@@ -12,9 +12,8 @@
 .bonjour {
     display: flex;
 }
-
-.container-fluid{
-    margin-top: 2%;
+body {
+    margin-top: 120px !important;
 }
 
 /*  FOOTER  */
