--- a/public/css/ville.css
+++ b/public/css/ville.css
@@ -1,3 +1,12 @@
 .main {
     display: flex;
 }
+.police {
+    font-family: 'Mystery Quest', cursive;
+    font-size: 5em;
+    text-align: center;
+}
+.presidente {
+    border: solid 2px black;
+    border-radius: 6px;
+}
