--- a/templates/admin/ville/index.html.twig
+++ b/templates/admin/ville/index.html.twig
@@ -3,16 +3,18 @@
 
 {% block body %}
     <div class="container-fluid">
+        <h1 class="police">FILMAMI</h1>
     <div class="main">
-        <div class="col-8">
+        <div class="col-9">
 
             <h1>Gestion des Villes</h1>
 
             {{ form_start(form) }}
 
             {{ form_row(form.nom) }}
-            <button type="submit">Validez</button>
-
+            <hr>
+            <button class="btn btn-dark" type="submit">Validez</button>
+            <hr>
             {{ form_end(form) }}
 
             <table class="table table-striped">
@@ -24,15 +26,15 @@
                     <tr>
                         <td>{{ ville.nom }}</td>
                         <td>
-                            <a href="{{ path('app_admin_ville_index', {'id': ville.id}) }}">Modifier</a>
+                            <a class="btn btn-dark" href="{{ path('app_admin_ville_index', {'id': ville.id}) }}">Modifier</a>
                             <a href="{{ path('app_admin_ville_efface', {'id': ville.id}) }}"
-                               class="btn-delete">Supprimer</a>
+                               class="btn btn-dark btn-delete">Supprimer</a>
                         </td>
                     </tr>
                 {% endfor %}
             </table>
         </div>
-        <div class="col-4">
+        <div class="presidente col-3">
             <img src="{{ asset('img/presidente40.jpg') }}" alt="">
         </div>
     </div>
