--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,13 +9,18 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ asset('css/filmami_commun.css') }}">
+        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.0/lux/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-smnSwzHqW1zKbeuSMsAM/fMQpkk7HY11LuHiwT8snL/W2QBoZtVCT4H5x1CEcJCs" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Ewert&family=Lacquer&family=Mystery+Quest&display=swap" rel="stylesheet">
+
     {% endblock %}
     <title>Filmami</title>
     <link type="image/jpeg" rel="icon" href="{{ asset('clap_onglet.jpg') }}" />
 </head>
 {#         ///////         NAVBAR    ADMIN            ///////               #}
 {% if is_granted('ROLE_ADMIN') %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="100" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
     <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +58,8 @@
 {#         ///////        FIN    NAVBAR   ADMIN             ///////               #}
 {#         ///////         NAVBAR   PUBLIC             ///////               #}
 {% if is_granted('ROLE_USER') %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="100" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
     <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
