--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{{ asset('css/filmami_accueil.css') }}" type="text/css">
 {% endblock %}
 
-{% block title %}Formulaire d'inscription{% endblock %}
+{% block title %}Page d'accueil{% endblock %}
 
 
 {% block body %}
