--- a/public/css/filmami_accueil.css
+++ b/public/css/filmami_accueil.css
@@ -63,22 +63,6 @@ a {
     border: dimgrey solid 1px;
 }
 
-/* ----------------------- FOOTER ----------------------- */
-
-
-h4 {
-    margin-top: 20px;
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: black;
-    color: white;
-    margin-top: 80px;
-}
-
 /* -------------------------------------- MEDIA QUERIES ------------------------------------------------ */
 
 /* ----- Très grand écrans ---- */
@@ -200,7 +184,7 @@ footer {
     }
 }
 
-/*Media 385px*/
+/*Media 395px Pixel 2*/
 @media (max-width: 395px) {
     .col-4 {
         margin-left: 70%;
@@ -215,6 +199,7 @@ footer {
     }
 }
 
+/*Media 291x Iphone 5 et -*/
 @media (max-width: 291px) {
     .col-4 {
         margin-left: 90%;
