--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,74 +19,74 @@
 </head>
 {#         ///////         NAVBAR    ADMIN            ///////               #}
 {% if is_granted('ROLE_ADMIN') %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-    <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="100" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
-    <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ path('app_index_index') }}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_suggestion_index') }}">Suggestions</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_admin_ville_index') }}">Villes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_admin_genre_index') }}">Genre de films</a>
-            </li>
-        </ul>
-        <div class="bonjour">
-            <div>
-                <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
-            </div>
-            <div>
-                <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="100" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
+        <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_index_index') }}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_suggestion_index') }}">Suggestions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_admin_ville_index') }}">Villes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_admin_genre_index') }}">Genre de films</a>
+                </li>
+            </ul>
+            <div class="bonjour">
+                <div>
+                    <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
+                </div>
+                <div>
+                    <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
 {% endif %}
 {#         ///////        FIN    NAVBAR   ADMIN             ///////               #}
 {#         ///////         NAVBAR   PUBLIC             ///////               #}
 {% if is_granted('ROLE_USER') %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="100" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
-    <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ path('app_index_index') }}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_suggestion_index') }}">Suggestions</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
-            </li>
-        </ul>
-        <div class="bonjour">
-            <div>
-                <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
-            </div>
-            <div>
-                <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a href="{{ path('app_index_index') }}"  alt=""><img class="navbar-brand" width="100" height="60" src="{{ asset('img/logo.png') }}" alt=""></a>
+        <a class="navbar-brand" href="{{ path('app_index_index') }}">FilmAmi</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_index_index') }}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_suggestion_index') }}">Suggestions</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_profil_index') }}">Mon profil</a>
+                </li>
+            </ul>
+            <div class="bonjour">
+                <div>
+                    <a class="nav-item nav-link nav-link2" href="#">Bonjour {{ app.user }} !</a>
+                </div>
+                <div>
+                    <button class="nav-item btn btn-outline-light my-2 my-sm-0" type="submit"><a href="{{ path('app_index_logout') }}">Déconnexion</a></button>
+                </div>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
 {% endif %}
 {#         ///////        FIN    NAVBAR    PUBLIC            ///////               #}
 <main class="container-fluid">
@@ -105,11 +105,10 @@
             </div>
         {% endfor %}
     {% endfor %}
-
 </main>
     {% block body %}{% endblock %}
 
-        {#    footer html #}
+    {#    footer html #}
     <footer>
         <h4>Nos réseaux sociaux:</h4>
         <div class="row">
@@ -121,8 +120,7 @@
         <br>
         <h6> Copyright &copy;Filmami 2020</h6>
     </footer>
-
-
+</main>
 
 {% block javascripts %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
