--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -5,119 +5,124 @@
     <link rel="stylesheet" href="{{ asset('css/profil.css') }}" type="text/css">
 {% endblock %}
 
-{% block title %}{% endblock %}
+{% block title %}Mon profil{% endblock %}
 
 {% block body %}
+
     <div class="container-fluid">
-    <div class="row">
-        <div class="col" id="titreprofil">
-            <h1>Mon profil</h1>
-        </div>
-    </div>
-    <!-------- Fiche profil -------->
-    <div class="row">
-        <div class="col" id="profil">
-            <div class="float-left"><img class="img-thumbnail" src="{{ asset('img/placeholder2.png') }}" alt="">
+
+        <!-------- Titre profil -------->
+      <div class="row">
+          <div class="col" id="titreprofil">
+              <h1>Mon profil</h1>
+          </div>
+      </div>
+
+        <!-------- Carte profil -------->
+        <div class="carte"id="profil">
+        <!-------- Haut de la carte -------->
+        <div class="row" >
+
+            <!-------- Profil -------->
+            <!-------- Col gauche -------->
+            <div class="col" >
+
+                <!-------- Image -------->
+                <div class="img">
+{#                    <div class="float-left">#}
+                    {% if profil.image is not null %}
+                        <img class="img-thumbnail" src="{{ asset('images/' ~ profil.image) }}">
+
+                        <!-------- J'ai rajouté cette ligne pour intégrer le placeholder -------->
+                    {% else %}
+                        <img class="img-thumbnail" src="{{ asset('img/placeholder_3.png') }}" alt="">
+
+                    {% endif %}
+                </div>
             </div>
-            <div class="col-11 p-1"><h2> {{ profil.pseudo }}</h2></div>
-            <br>
 
-<div class="texteprofil">
-                {#    <div class="col-11 p-1">ID : {{ profil.id }}</div>#}
-                <div class="col-11 p-1">Ville: {{ profil.ville.nom }}</div>
-                <div class="col-11 p-1">Age : 26 ans</div>
-                <div class="col-11 p-1">Profession : infirmière</div>
+            <!-------- Col Droite -------->
+    <div class="col" id="droite">
+                <div class="col-11 p-1"> <h2>{{ profil.pseudo }}</h2></div>
                 <br>
-                <div class="col-11 p-1">Genre de films préféré : {{ profil.genre.type }}</div>
-                <br>
-                <div class="col p-1" id="genre"> Email : {{ profil.email }}</div>
-                <br>
-            <br>
-                <hr>
-
-
-                <div class="col-11 p-1"> Age : {{ profil.age }}</div>
-                <br>
-                <div class="col-11 p-1"> Sexe : {{ profil.sexe }}</div>
-                <br>
-                <div class="col-11 p-1"> A propos de moi : {{ profil.info }}</div>
-                <br>
-                <div class="col-11 p-1"> Photo :
-                    <td>
-                        {% if profil.image is not null %}
-                            <img src="{{ asset('images/' ~ profil.image) }}" height="500px">
+                <div class="texteprofil">
+                    <div class="col-11 p-1">Ville : &nbsp {{ profil.ville.nom }}</div>
+                    <div class="col-11 p-1">
+                        <!-------- Ici j'ai rajouté le fait que l'âge soit renseigné ou non -------->
+                        {% if profil.info is not null %}
+                            Age &nbsp: &nbsp {{ profil.age }}
+                        {% else %}
+                            Age &nbsp: &nbsp Non renseigné
                         {% endif %}
-                    </td>
-                </div>
-            </div>
-        </div>
-        {#
-                <div class="col-3">
-                    <h1>Mes amis :</h1>
-                    <hr>
-                    <div class="card" style="width: 18rem;">
-                        <img src="{{ asset('img/placeholder.jpg') }}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Elsa</h5>
-                            <h5 class="card-title">Paris</h5>
-                            <h5 class="card-title">Drame</h5>
-                            <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
-                            <a href="#" class="btn btn-dark">Voir le profil</a>
-                            <hr>
-                            <a href="#" class="btn btn-dark">Envoyer un mail</a>
                         </div>
-                    </div>
+                    <div class="col-11 p-1">
+                        <!-------- Ici j'ai rajouté le fait que l'âge soit renseigné ou non -------->
+                        {% if profil.info is not null %}
+                            Sexe &nbsp: &nbsp {{ profil.sexe }}
+                        {% else %}
+                            Sexe &nbsp: &nbsp Non renseigné
+                        {% endif %}</div>
+                    <div class="col-11 p-1"> Email &nbsp: &nbsp {{ profil.email }}</div>
+                    <br>
+                    <div class="col p-1" id="genre">Genre de films préféré : {{ profil.genre.type }}</div>
 
-                </div>
-        #}
+                    <!-------- Bouton apparait que si apropos n'existe pas sinon il sera affiché sous a propos -------->
+                        {% if profil.info is null %}
+                            <a type="button" href="{{ path('app_profil_edit') }}"
+                               class="btn" id="modifier1">
+                                Modifier votre profil
+                            </a>
+                        {% else %}
+                        {% endif %}
+                <br>
     </div>
-
-    <a type="button" href="{{ path('app_profil_edit', {'id': profil.id}) }}"
-       class="btn btn-info">
-        Modifier votre profile
-    </a>
-        <!-------- Fin container fluid -------->
-<div class="row">
-    <div class="col" id="apropos">
-        <h3> A propos :</h3>
-        <p>Passioné par le cinéma depuis mon plus jeune âge, je serai ravi qu'on partage nos avis cinématographiques ! Je préfère les documentaires, mais j'aime aussi les films d'action et de fiction.
-            N'hésites pas à m'ajouter !</p>
-
+    </div>
+    </div>
         <div class="row">
-            <a type="button" href="{{ path('app_profil_edit') }}"
-               class="btn" id="modifier">
-                Modifier votre profil
-            </a>
-    </div>
-</div>
-        </div>
-    </div>
+            <div class="col" id="apropos">
+                <!-------- Ici j'ai rajouté le fait que la partie à propos soit visible que si elle est remplie -------->
+                {% if profil.info is not null %}
+                    <hr>
+                    <h3> A propos :</h3>
+                    <p>{{ profil.info }}</p>
+                {% else %}
+                {% endif %}
 
-        </div>
-
-
-
-    </div>
-    <!-------- Fin container fluid -------->
-
-    {#
-            <div class="col-3">
-                <h1>Mes amis :</h1>
-                <hr>
-                <div class="card" style="width: 18rem;">
-                    <img src="{{ asset('img/placeholder.jpg') }}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Elsa</h5>
-                        <h5 class="card-title">Paris</h5>
-                        <h5 class="card-title">Drame</h5>
-                        <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
-                        <a href="#" class="btn btn-dark">Voir le profil</a>
-                        <hr>
-                        <a href="#" class="btn btn-dark">Envoyer un mail</a>
-                    </div>
+                <!-------- Bouton apparait que si apropos est affiché sinon il sera affiché sous le genre de film -------->
+                <div class="row">
+                    {% if profil.info is not null %}
+                        <a type="button" href="{{ path('app_profil_edit') }}"
+                           class="btn" id="modifier2">
+                            Modifier votre profil
+                        </a>
+                    {% else %}
+                    {% endif %}
                 </div>
-
             </div>
-    #}
+        </div>
+    </div>
+        <!-------- Fin container fluid -------->
+
+            {#
+                    <div class="col-3">
+                        <h1>Mes amis :</h1>
+                        <hr>
+                        <div class="card" style="width: 18rem;">
+                            <img src="{{ asset('img/placeholder.jpg') }}" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Elsa</h5>
+                                <h5 class="card-title">Paris</h5>
+                                <h5 class="card-title">Drame</h5>
+                                <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
+                                <a href="#" class="btn btn-dark">Voir le profil</a>
+                                <hr>
+                                <a href="#" class="btn btn-dark">Envoyer un mail</a>
+                            </div>
+                        </div>
+
+                    </div>
+            #}
+    </div>
+    </div>
 
 {% endblock %}
