--- a/templates/suggestion/index.html.twig
+++ b/templates/suggestion/index.html.twig
@@ -18,23 +18,23 @@
     <div class="container-fluid">
 
         <h1 class="police">FILMAMI</h1>
-        <div>
-            <h3>Voici les personnes près de chez vous qui partagent vos goûts cinématographiques!</h3>
+        <div class="centrez">
+            <span class="voici">Voici les personnes près de chez vous qui partagent vos goûts cinématographiques!</span> <br>
 
-            <h4>Vous pouvez :</h4>
-            <h5>Visiter leur profil, et peut-être ensuite leur proposer d'être votre ami sur ce site.</h5>
-            <h5>Ou directement leur envoyer un mail pour leur proposer une séance!</h5>
-            <h3>Bon film !</h3>
+            <span class="pouvez">Vous pouvez :</span> <br>
+            <span class="visiter">- Visiter leur profil, et peut-être ensuite leur proposer d'être votre ami sur ce site.</span> <br>
+            <span>- Ou directement leur envoyer un mail pour leur proposer une séance!</span> <br>
+            <span class="bonfilm">Bon film !</span>
             <hr>
         </div>
 
 
-        <div>
+        <div class="col-12">
             <!--          Container des 3 cartes pour traitement Ajax          -->
-            <div id="cartes_row">
-                <div class="row liste container">
+            <div id="cartes_row" >
+                <div class="row liste">
                     {% for suggestion in suggestions %}
-                        <div class="card" style="width: 18rem;">
+                        <div class="card centrez" style="width: 18rem;">
                             <img src="../img/placeholder2_25.jpg" class="card-img-top" alt="...">
                             {#<img src="{{ asset('../img/placeholder.jpg') }}" alt="">#}
                             <div class="card-body">
@@ -42,10 +42,10 @@
                                     <h5 class="card-title">{{ suggestion.pseudo }}</h5>
                                 </tr>
                                 <tr>
-                                    <h5 class="card-title">{{ suggestion.ville.nom }}</h5>
+                                    <span class="card-title">{{ suggestion.ville.nom }}</span> <br>
                                 </tr>
                                 <tr>
-                                    <h5 class="card-title">{{ suggestion.genre.type }}</h5>
+                                    <span class="card-title">{{ suggestion.genre.type }}</span>
                                 </tr>
                                 <tr>
                                     <p class="card-text">Ici la zone de cours texte du champ "A propos"</p>
@@ -56,7 +56,7 @@
                                 </tr>
                                 <hr>
                                 <tr>
-                                    <a href="#" class="btn btn-dark">Envoyer un mail: {{ suggestion.email }}</a>
+                                    <a href="#" class="btn btn-dark">Envoyez un mail: {{ suggestion.email }}</a>
                                 </tr>
                             </div>
                         </div>
@@ -65,14 +65,25 @@
             </div>
         </div>
         <hr>
+        <div class="liste">
         <div>
-            <h2>Voulez-vous voir d'autres personnes ?</h2>
+            <span class="voici">Voulez-vous voir d'autres personnes ?</span>
             <form id="plus" method="get">
                 <a type="button" id="load" class="btn btn-dark mb-2
             href="{{ path('app_suggestion_plusdesuggestions') }}" >
                 Voir plus de résultats !
                 </a>
             </form>
+        </div>
+        <div>
+            <span class="voici">Voulez-vous voir d'autres personnes ?</span>
+            <form id="plus" method="get">
+                <a type="button" id="load" class="btn btn-dark mb-2
+            href="{{ path('app_profil_index') }}" >
+                Voir mon profil !
+                </a>
+            </form>
+        </div>
         </div>
 
     </div>
